fixed many responsive layout issues

--- a/components/apply-section/deadline/deadline.scss
+++ b/components/apply-section/deadline/deadline.scss
@@ -22,6 +22,9 @@
         font-weight: 600;
         font-size: 1.2rem;
     }
+    .class-deadline {
+        display: block!important;
+    }
     .class-deadline > span {
         font-size: 2rem;
         margin-top: 0.5em;
