--- a/components/contact-form/contact-form.scss
+++ b/components/contact-form/contact-form.scss
@@ -2,6 +2,7 @@
   max-width: 560px;
   font-family: "Work Sans";
   margin-top: 1em;
+  padding-top: 1.5em;
 }
 
 label {
@@ -12,29 +13,31 @@ label > input {
   position: relative;
   background-color: transparent;
   border: none;
-  border-bottom: 1px dotted #9e9e9e;
+  border-bottom: 1px solid #3f51b525;
+  // background: #fff;
   border-radius: 0;
   outline: none;
   height: 45px;
-  width: 100%;
+  width: calc(100% - 1em);
   font-size: 16px;
-  margin: 0 0 30px 0;
-  padding: 0;
+  margin: 0.25em 0 15px 0;
+  padding: 0 0 0 1em;
+  box-sizing: border-box;
   box-shadow: none;
   box-sizing: content-box;
-  transition: all 0.4s;
+  transition: all 175ms;
 }
 
-label > input:valid + span,
+label > input + span,
 .hasText + span {
   transform: translateY(-25px) scale(0.8);
   transform-origin: 0;
 }
 
-label > input:valid {
-  border-bottom: 1px dotted #3f51b5;
-  box-shadow: 0 1px 0 0 #3f51b5;
-}
+// label > input:valid {
+//   // border-bottom: 1px dotted #3f51b5;
+//   box-shadow: 0 1px 0 0 #3f51b5;
+// }
 
 label > span {
   color: #9e9e9e;
@@ -44,6 +47,8 @@ label > span {
   font-size: 16px;
   cursor: text;
   transition: 0.2s ease-out;
+  padding-left: 1em;
+
 }
 
 label > input:focus + span {
@@ -53,7 +58,7 @@ label > input:focus + span {
 }
 
 label > input:focus {
-  border-bottom: 1px dotted #3f51b5;
+  border-bottom: 1px solid #3f51b5;
   box-shadow: 0 1px 0 0 #3f51b5;
 }
 
