--- a/components/header/navbar/navbar.scss
+++ b/components/header/navbar/navbar.scss
@@ -5,6 +5,8 @@ $primary-color: #293a7d;
   align-items: center;
   justify-content: center;
 
+  
+
   @media (max-width: 768px) {
     display: none;
   }
@@ -19,7 +21,9 @@ $primary-color: #293a7d;
       padding: 0 0.5rem;
 
       a {
-        color: $primary-color;
+        // color: $primary-color;
+        color: #000;
+        opacity: 0.66;
         // color: #fff;
         // font-weight: bold !important;
         font-size: 1rem !important;
@@ -29,16 +33,20 @@ $primary-color: #293a7d;
         font-family: "Space Mono";
         letter-spacing: 0.2em;
         font-weight: 800;
+        transition: 500ms;
 
         &:hover,
         &:active {
-          opacity: 0.9;
+          opacity: 1;
+          color: $primary-color;
           text-decoration: underline;
         }
         &.donate {
-          background-color: $primary-color;
-          color: white;
-          padding: 0.7rem;
+          // background-color: $primary-color;
+          background-color: #fd9240;
+          color:  $primary-color;
+          padding: 0.7rem 2em;
+          opacity: 1;
         }
       }
       &.active > a {
