--- a/components/layouts/content/SplashQuote.scss
+++ b/components/layouts/content/SplashQuote.scss
@@ -1,8 +1,8 @@
 .splash-quote {
     background-color: #f3f3f3;
-    padding: 4em 1em 3em 1em;
+    padding: 4em 1em 4em 1em;
     text-align: center;
-    margin-bottom: 2em;
+    margin-bottom: 0em;
 
     &.dark-theme-quote {
         background-color: #293a7d;
