--- a/components/layouts/content/content.scss
+++ b/components/layouts/content/content.scss
@@ -16,7 +16,7 @@
     margin: 0!important;
     font-size: 1rem;
     line-height: 2.2rem;
-    background-color: #eee;
+    background-color: #f3f3f3;
     box-shadow: none;
   }
 
