--- a/components/layouts/sponsor-split.scss
+++ b/components/layouts/sponsor-split.scss
@@ -4,9 +4,9 @@
     background-image: url("/static/images/about_sponsor.jpg");
     background-position: top left;
     // background-position: -50vw center;
-    background-size: 40%;
+    background-size: 55%;
     background-repeat: no-repeat; 
-    padding-left: 40%;
+    padding-left: 30%;
     background-color: #f3f3f3;
 
     > section {
