--- a/components/sponsors/sponsors.scss
+++ b/components/sponsors/sponsors.scss
@@ -3,7 +3,7 @@ section.sponsors {
   align-items: center;
   flex-direction: column;
   padding: 1rem 4rem 3rem 4rem;
-  max-width: 900px;
+  // max-width: 900px;
   text-align: center;
   margin: 0 auto;
   background: #f3f3f3;
