--- a/components/video-highlight/video-highlight.scss
+++ b/components/video-highlight/video-highlight.scss
@@ -29,7 +29,7 @@ section.video-highlight {
     margin: 0;
     font-size: 1rem;
     line-height: 2.2rem;
-    background-color: #eee;
+    background-color: #f3f3f3;
     box-shadow: none;
   }
 
